--- a/en/contact.html
+++ b/en/contact.html
@@ -3,13 +3,79 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact | Casona Belga</title>
-  <meta name="description" content="Contact, location, opening hours, and direct WhatsApp." />
+  <title>Contact | Casona Belga - Hotel & Restaurant in Chile Chico</title>
+  <meta name="description" content="Contact Casona Belga in Chile Chico. Location, opening hours, phone +56 9 9824 4016, WhatsApp reservations. Bernardo O'Higgins 895, Chile Chico, Aysén." />
+  <meta name="keywords" content="Casona Belga contact, Chile Chico location, restaurant hours, hotel reservations, WhatsApp booking, Chile Chico address, Aysen contact" />
   <meta name="theme-color" content="#07070a" />
 
   <link rel="stylesheet" href="../style.css?v=3" />
+  <link rel="stylesheet" href="../components.css?v=1" />
+  <link rel="stylesheet" href="../accessibility.css?v=1" />
+  <link rel="stylesheet" href="../theme-toggle.css?v=1" />
   <link rel="stylesheet" href="../chatbot.css" />
   <link rel="icon" href="../assets/logo_casona.png" type="image/png" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Contact | Casona Belga - Hotel & Restaurant in Chile Chico" />
+  <meta property="og:description" content="Contact Casona Belga in Chile Chico. Location, opening hours, phone +56 9 9824 4016, WhatsApp reservations. Bernardo O'Higgins 895, Chile Chico, Aysén." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.casonabelga.cl/en/contact.html" />
+  <meta property="og:image" content="https://www.casonabelga.cl/assets/og.jpg" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:site_name" content="Casona Belga" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Contact | Casona Belga in Chile Chico" />
+  <meta name="twitter:description" content="Contact us: +56 9 9824 4016. Bernardo O'Higgins 895, Chile Chico, Aysén. WhatsApp reservations available." />
+  <meta name="twitter:image" content="https://www.casonabelga.cl/assets/og.jpg" />
+
+  <!-- JSON-LD Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": ["Hotel", "Restaurant"],
+    "name": "Casona Belga",
+    "description": "Hotel and restaurant in Chile Chico, Chilean Patagonia",
+    "url": "https://www.casonabelga.cl/en/contact.html",
+    "telephone": "+56998244016",
+    "email": "casonabelga@gmail.com",
+    "image": "https://www.casonabelga.cl/assets/og.jpg",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Bernardo O'Higgins 895",
+      "addressLocality": "Chile Chico",
+      "addressRegion": "Aysén",
+      "postalCode": "6050000",
+      "addressCountry": "CL"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": "-46.5419",
+      "longitude": "-71.7215"
+    },
+    "openingHoursSpecification": [
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
+        "opens": "12:30",
+        "closes": "22:30",
+        "description": "Restaurant hours"
+      },
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
+        "opens": "11:00",
+        "closes": "23:30",
+        "description": "Hotel reception hours"
+      }
+    ],
+    "sameAs": [
+      "https://www.instagram.com/casonabelga",
+      "https://www.facebook.com/casonabelga.belga/"
+    ]
+  }
+  </script>
 
   <link rel="canonical" href="https://www.casonabelga.cl/en/contact.html" />
   <link rel="alternate" hreflang="en" href="https://www.casonabelga.cl/en/contact.html" />
@@ -18,11 +84,15 @@
 </head>
 
 <body>
+  <!-- Skip Links for Accessibility -->
+  <a href="#main-content" class="skip-link">Skip to main content</a>
+  <a href="#navigation" class="skip-link">Skip to navigation</a>
+
   <header>
     <div class="container nav">
       <div class="brand brand-row">
         <a href="./index.html" class="brand-link" aria-label="Casona Belga - Home">
-          <img src="../assets/logo_casona.png" alt="Casona Belga logo" class="logo" />
+          <img src="../assets/logo_casona.png" alt="Casona Belga logo" class="logo" width="60" height="60" />
           <div class="brand-text">
             <strong>Casona Belga</strong>
             <span>Contact</span>
@@ -30,7 +100,7 @@
         </a>
       </div>
 
-      <nav class="menu">
+      <nav id="navigation" class="menu" role="navigation" aria-label="Main Navigation">
         <a class="btn" href="menu.html">Restaurant</a>
         <a class="btn" href="rooms.html">Rooms</a>
 
@@ -42,7 +112,7 @@
     </div>
   </header>
 
-  <main class="container section">
+  <main id="main-content" class="container section" role="main">
     <div data-animate>
       <h2>Contact</h2>
     </div>
@@ -97,7 +167,7 @@
   </main>
 
   <!-- ENHANCED FOOTER -->
-  <footer class="footer">
+  <footer class="footer" role="contentinfo">
     <div class="container">
       <div class="footer-grid">
         <div class="footer-section">
@@ -143,5 +213,11 @@
   <script src="../config.js"></script>
   <script src="../script.js" defer></script>
   <script src="../chatbot-ai-en.js" defer></script>
+
+  <!-- Theme Toggle (load early to prevent flash) -->
+  <script src="../theme-toggle.js"></script>
+
+  <!-- Analytics -->
+  <script src="../analytics.js" defer></script>
 </body>
 </html>
